@@ -87,6 +87,11 @@ Release date: TBA
 * Improve ``as_string()`` representation for ``TypeVar``, ``ParamSpec`` and ``TypeVarTuple`` nodes, as well as
   type parameter in ``ClassDef``, ``FuncDef`` and ``TypeAlias`` nodes (PEP 695).
 
+* Astroid now correctly supports the ``exceptions`` attribute of ``ExceptionGroup``.
+
+  Closes pylint-dev/pylint#8985
+  Closes pylint-dev/pylint#10558
+
 
 What's New in astroid 3.3.11?
 =============================
